Add APP_KEY from food2fork, fetching and displaying the recipes

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,16 @@
 {
   "extends": ["airbnb", "prettier", "prettier/react"],
   "parser": "babel-eslint",
+  "env": {
+    "browser": true
+  },
   "rules": {
     "react/jsx-filename-extension": [
       1,
       {
         "extensions": [".js"]
       }
-    ]
+    ],
+    "react/state-in-constructor": 0
   }
 }
